Changelog (English)
===================

2.0.5
Enabled journal for FS ext3/4, ext2 without journal
Added an attempt to re-unmount in case of failure
The e2fsck utility is included in the assembly
Fixed problem with running dbus in Fedora
Fixed issue of creating a FS (mke2fs) when using busybox from system (issue # 891)

2.0.4
Added support Fedora 26 and 27
Updated Arch Linux bootstrap
openSUSE end of support

2.0.3
Added GNU dd utility (issue #729)
Added support for arm64 architecture in Gentoo
Fixed problem with set the variable name using the "config" command
Translated into Indonesian (issue #851)

2.0.2
Fixed an architecture emulation via binfmt_misc
Fixed issue of launching Xfce and Mate (issue #807)
Updated Arch Linux bootstrap (+libnghttp2, -xorg-utils)
Added file system check (issue #785)
Added custom target type
Fixed problem with showing menu button (issue #693)

2.0.1
Added Fedora 25 (issue #683)
Updated Arch Linux bootstrap (issue #699)
Fixed Fedora and CentOS bootstrap (issue #646)

2.0.0
The application interface is rewritten with Material Design
Completed transition to the new CLI
Added support Debian 9 (stretch), Fedora 24 and Ubuntu 16.10 (yakkety)
Added support for work without root permissions (based on PRoot)
Added interface for managing from TELNET (based on telnetd)
Added web interface (based on httpd, websocket.sh and xterm.js)
Added synchronization of the operating environment with server or other device
Added function to generate a random password for user (instead changeme)
Added function to track changes in the network and update the current container
Added ability to add users to groups aid_ * from the application interface
Added support for initialization systems run-parts and sysv
Added an option to keep CPU running to do work while the screen is off
Added an option to change the delay of start after opening XServer XSDL
Added stealth mode
Added ability to send notifications from a container through am
Added MATE desktop environment