@@ -8,7 +8,7 @@ android {
         applicationId 'ru.meefik.linuxdeploy'
         minSdkVersion 10
         targetSdkVersion 25
-        versionCode 229
+        versionCode 230
         versionName "2.0.5"
     }
     buildTypes {
